# HiveEngine

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
Hive/: CMakeLists.txt  hive.cpp  hive.h  hive_internal.h  hvpch.h
Hive/Core/: Debug.h
Hive/Core/Event/: EventManager.cpp  EventManager.h
Hive/Core/Libraries/: LibraryManager.cpp  LibraryManager.h
Hive/Core/Logging/: ConsoleLogger.cpp  ConsoleLogger.h  LogManager.cpp  LogManager.h
Hive/Core/Math/: Vector2.h  Vector2i.h  Vector3.h  Vector3i.h  Vector4.h  Vector4i.h
Hive/Core/Memory/: MemoryAllocator.cpp  MemoryAllocator.h  MemoryTracker.cpp  MemoryTracker.h  ScopedResource.h
Hive/Core/Object/: Object.cpp  Object.h
Hive/Core/Platform/: Platform.h  Platform_Linux.cpp  Platform_Windows.cpp
Hive/Core/Profiling/: Profiler.cpp  Profiler.h
Hive/Display/: DisplayAPI.cpp  DisplayAPI.h  DisplayType.h
Hive/Graphic/: API_utils.h  Buffer.cpp  Buffer.h  Command.cpp  Command.h  Framebuffer.cpp  Framebuffer.h  GFX.cpp  GFX.h  GraphicAPI.cpp  GraphicAPI.h  GraphicTypes.h  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h
HiveEngine/src/core/: Application.cpp  Application.h  Input.cpp  Input.h  Window.cpp  Window.h
HiveEngine/src/platform/glfw/: window_glfw.cpp  window_glfw.h
HiveEngine/src/rendering/: Camera.h  EditorCamera.cpp  EditorCamera.h
Modules/GLFW/: CMakeLists.txt  DisplayGLFW.cpp  DisplayGLFW.h  Module.cpp  NativeHelperGLFW.cpp  NativeHelperGLFW.h
Modules/Tracy/: CMakeLists.txt  Module.cpp
Modules/Vulkan/: BufferVulkan.cpp  BufferVulkan.h  CMakeLists.txt  CommandVulkan.cpp  CommandVulkan.h  FramebufferVulkan.cpp  FramebufferVulkan.h  GraphicDeviceVulkan.cpp  GraphicDeviceVulkan.h  Module.cpp  RenderpassVulkan.cpp  RenderpassVulkan.h  ShaderVulkan.cpp  ShaderVulkan.h  SurfaceFactory.cpp  SurfaceFactory.h  SwapchainVulkan.cpp  SwapchainVulkan.h  SyncVulkan.cpp  SyncVulkan.h  TextureVulkan.cpp  TextureVulkan.h  UtilsVulkan.cpp  UtilsVulkan.h
Sandbox/: main.cpp
Testbed/: CMakeLists.txt  main.cpp
